# RustChef

./: .dockerignore  Cargo.toml  Dockerfile  README.md
docs/: report.md
samples/: input.txt
samples/expected/: extract-emails.txt  extract-ips.txt  extract-urls.txt  stats.txt
src/: cli.rs  main.rs
src/ops/: base64_op.rs  entropy_op.rs  extract_op.rs  hash_op.rs  hex_op.rs  mod.rs  rot13_op.rs  stats_op.rs  url_op.rs  xor_op.rs
tests/: integration.rs
